Changed: 20161110120132, Changed by: Sander Fagerland Sandøy, Original value: : DAL.Accounts, New value: null, Event type: Create
Changed: 20161110120143, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Accounts_883FADC060E33EC57228EBC70BB17B094485FC02A2ACCB858EE5251262048CEF, New value: null, Event type: Delete
Changed: 20161110122057, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Transactions_A4CD73BA524E87DACA215A07D3A8AF912CDAC75F244C9F25A97A7FA77F631EFA, New value: null, Event type: Delete
Changed: 20161110122058, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Transactions_A4CD73BA524E87DACA215A07D3A8AF912CDAC75F244C9F25A97A7FA77F631EFA, New value: null, Event type: Delete
Changed: 20161110122058, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Accounts_883FADC060E33EC57228EBC70BB17B094485FC02A2ACCB858EE5251262048CEF, New value: null, Event type: Delete
Changed: 20161110122238, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Transactions_A4CD73BA524E87DACA215A07D3A8AF912CDAC75F244C9F25A97A7FA77F631EFA, New value: null, Event type: Delete
Changed: 20161110122238, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Accounts_883FADC060E33EC57228EBC70BB17B094485FC02A2ACCB858EE5251262048CEF, New value: null, Event type: Delete
Changed: 20161110122405, Changed by: Sander Fagerland Sandøy, Original value: : DAL.Accounts, New value: null, Event type: Create
Changed: 20161110122411, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Accounts_883FADC060E33EC57228EBC70BB17B094485FC02A2ACCB858EE5251262048CEF, New value: null, Event type: Delete