@@ -14,6 +14,5 @@ namespace BLL
         string UpdateTransaction(Transaction t);
         List<Transaction> ListExecuteableTransactions();
         void ExecuteTransaction(int id);
-        bool DeleteAllTransactions(string accountNumber);
     }
 }
