@@ -48,9 +48,5 @@ namespace BLL {
         public void ExecuteTransaction(int id) {
             _repository.ExecuteTransaction(id);
         }
-
-        public bool DeleteAllTransactions(string accountNumber) {
-            return _repository.DeleteAllTransactions(accountNumber);
-        }
     }
 }
