@@ -8,21 +8,14 @@ using System.Web;
 using Model;
 
 namespace DAL {
-    public class AccountRepository : IAccountRepository
-    {
-
+    public class AccountRepository : IAccountRepository {
         public List<Account> ListAccounts(string personalNumber) {
-            using (var db = new DbModel())
-            {
-                try
-                {
-
+            using (var db = new DbModel()) {
+                try {
                     var allAccounts = db.Accounts.Where(a => a.Owner.PersonalNumber == personalNumber);
                     var accounts = new List<Account>();
-                    foreach (var a in allAccounts)
-                    {
-                        accounts.Add(new Account
-                        {
+                    foreach (var a in allAccounts) {
+                        accounts.Add(new Account {
                             AccountNumber = a.AccountNumber,
                             AvailableBalance = a.AvailableBalance,
                             OwnerName = a.Owner.FirstName + " " + a.Owner.LastName,
@@ -30,14 +23,11 @@ namespace DAL {
                         });
                     }
                     return accounts;
-                }
-                catch (Exception exc)
-                {
+                } catch (Exception exc) {
                     string error = "Exception: " + exc.ToString() + " catched at DeleteAccoúnt()";
-                    writeToErrorLog(error);
+                    WriteToErrorLog(error);
                     return null;
                 }
-
             }
         }
 
@@ -45,12 +35,33 @@ namespace DAL {
             using (var db = new DbModel()) {
                 try {
                     var deleteAccount = db.Accounts.Find(accountNumber);
-
-                    if (deleteAccount.Transactions.Count != 0) {
+                    if (deleteAccount == null) {
                         return false;
                     }
-
+                    // Sletter transaksjoner som ikke er utført
+                    var deleteTransactions = deleteAccount.Transactions.Where(t => t.TimeTransfered == null);
+                    foreach (var t in deleteTransactions) {
+                        db.Transactions.Remove(t);
+                        //write to changelog
+                        var tLog = new ChangeLog();
+                        tLog.ChangedTime = (DateTime.Now).ToString("yyyyMMddHHmmss");
+                        tLog.EventType = "Delete";
+                        tLog.OriginalValue = t.ToString();
+                        tLog.NewValue = "null";
+                        var tContext = HttpContext.Current;
+                        if (tContext.Session["CurrentAdmin"] != null) {
+                            Admins changedby = (Admins)tContext.Session["CurrentAdmin"];
+                            tLog.ChangedBy = changedby.FirstName + " " + changedby.LastName;
+                        } else {
+                            tLog.ChangedBy = "null";
+                        }
+                        WriteToChangeLog(tLog.toString());
+                    }
+                    // Kobler alle ikke-utførte transaksjoner fra kontoen slik at den kan slettes
+                    deleteAccount.Transactions.RemoveAll(t => t.TimeTransfered != null);
+                    // Sletter kontoen
                     db.Accounts.Remove(deleteAccount);
+                    
                     //save to log
                     var log = new ChangeLog();
                     log.ChangedTime = (DateTime.Now).ToString("yyyyMMddHHmmss");
@@ -58,22 +69,18 @@ namespace DAL {
                     log.OriginalValue = deleteAccount.ToString();
                     log.NewValue = "null";
                     var context = HttpContext.Current;
-                    if (context.Session["CurrentAdmin"] != null)
-                    {
+                    if (context.Session["CurrentAdmin"] != null) {
                         Admins changedby = (Admins)context.Session["CurrentAdmin"];
                         log.ChangedBy = changedby.FirstName + " " + changedby.LastName;
-                    }
-                    else
-                    {
+                    } else {
                         log.ChangedBy = "null";
                     }
                     WriteToChangeLog(log.toString());
                     db.SaveChanges();
                     return true;
-                } catch (Exception exc)
-                {
+                } catch (Exception exc) {
                     string error = "Exception: " + exc.ToString() + " catched at DeleteAccoúnt()";
-                    writeToErrorLog(error);
+                    WriteToErrorLog(error);
                     return false;
                 }
             }
@@ -96,7 +103,7 @@ namespace DAL {
                     return account;
                 } catch (Exception exc) {
                     string error = "Exception: " + exc.ToString() + " catched at GetUpdateableAccount()";
-                    writeToErrorLog(error);
+                    WriteToErrorLog(error);
                     return null;
                 }
             }
@@ -121,13 +128,10 @@ namespace DAL {
                     log.OriginalValue = originalvalue;
                     log.NewValue = accounts.Owner.FirstName + " " + accounts.Owner.LastName;
                     var context = HttpContext.Current;
-                    if (context.Session["CurrentAdmin"] != null)
-                    {
+                    if (context.Session["CurrentAdmin"] != null) {
                         Admins changedby = (Admins)context.Session["CurrentAdmin"];
                         log.ChangedBy = changedby.FirstName + " " + changedby.LastName;
-                    }
-                    else
-                    {
+                    } else {
                         log.ChangedBy = "null";
                     }
                     WriteToChangeLog(log.toString());
@@ -135,7 +139,7 @@ namespace DAL {
                     return "";
                 } catch (Exception exc) {
                     string error = "Exception: " + exc.ToString() + " catched at UpdateAccount()";
-                    writeToErrorLog(error);
+                    WriteToErrorLog(error);
                     return "Feil: " + exc.Message;
                 }
             }
@@ -151,18 +155,15 @@ namespace DAL {
                         PersonalNumber = personalNumber,
                         Transactions = new List<Transactions>()
                     };
-
                     // Validerer kontonummer
                     if (accounts.AccountNumber.Length != 11) {
                         return false;
-                    } 
-
+                    }
                     // Validerer om eieren eksisterer
                     var owner = db.Customers.Find(accounts.PersonalNumber);
                     if (owner == null) {
                         return false;
                     }
-
                     db.Accounts.Add(accounts);
                     //write to changelog
                     var log = new ChangeLog();
@@ -171,13 +172,10 @@ namespace DAL {
                     log.OriginalValue = accounts.ToString();
                     log.NewValue = "null";
                     var context = HttpContext.Current;
-                    if (context.Session["CurrentAdmin"] != null)
-                    {
+                    if (context.Session["CurrentAdmin"] != null) {
                         Admins changedby = (Admins)context.Session["CurrentAdmin"];
                         log.ChangedBy = changedby.FirstName + " " + changedby.LastName;
-                    }
-                    else
-                    {
+                    } else {
                         log.ChangedBy = "null";
                     }
                     WriteToChangeLog(log.toString());
@@ -185,43 +183,34 @@ namespace DAL {
                     return true;
                 } catch (Exception exc) {
                     string error = "Exception: " + exc.ToString() + " catched at AddAccount()";
-                    writeToErrorLog(error);
+                    WriteToErrorLog(error);
                     return false;
                 }
             }
         }
 
-        public void WriteToChangeLog(string log)
-        {
+        public void WriteToChangeLog(string log) {
             string path = "ChangeLog.txt";
             var _Path = Path.Combine(System.Web.Hosting.HostingEnvironment.MapPath("~/App_Data/"), path);
-            if (!File.Exists(_Path))
-            {
+            if (!File.Exists(_Path)) {
                 string createText = log + Environment.NewLine;
                 File.WriteAllText(_Path, createText);
-            }
-            else
-            {
+            } else {
                 string appendText = log + Environment.NewLine;
                 File.AppendAllText(_Path, appendText);
             }
         }
 
-        public void writeToErrorLog(string error)
-        {
+        public void WriteToErrorLog(string error) {
             string path = "ErrorLog.txt";
             var _Path = Path.Combine(System.Web.Hosting.HostingEnvironment.MapPath("~/App_Data/"), path);
-            if (!File.Exists(_Path))
-            {
+            if (!File.Exists(_Path)) {
                 string createText = error + Environment.NewLine;
                 File.WriteAllText(_Path, createText);
-            }
-            else
-            {
+            } else {
                 string appendText = error + Environment.NewLine;
                 File.AppendAllText(_Path, appendText);
             }
-
         }
     }
 }
