@@ -13,6 +13,5 @@ namespace DAL
         string UpdateTransaction(Transaction t);
         List<Transaction> ListExecuteableTransactions();
         void ExecuteTransaction(int id);
-        bool DeleteAllTransactions(string accountNumber);
     }
 }
