@@ -59,9 +59,5 @@ namespace DAL
         {
             throw new NotImplementedException();
         }
-
-        public bool DeleteAllTransactions(string accountNumber) {
-            throw new NotImplementedException();
-        }
     }
 }
