@@ -17,3 +17,10 @@ Changed: 20161110122238, Changed by: Sander Fagerland Sandøy, Original value: :
 Changed: 20161110122238, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Accounts_883FADC060E33EC57228EBC70BB17B094485FC02A2ACCB858EE5251262048CEF, New value: null, Event type: Delete
 Changed: 20161110122405, Changed by: Sander Fagerland Sandøy, Original value: : DAL.Accounts, New value: null, Event type: Create
 Changed: 20161110122411, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Accounts_883FADC060E33EC57228EBC70BB17B094485FC02A2ACCB858EE5251262048CEF, New value: null, Event type: Delete
+Changed: 20161110124114, Changed by: Sander Fagerland Sandøy, Original value: : DAL.Accounts, New value: null, Event type: Create
+Changed: 20161110124118, Changed by: Sander Fagerland Sandøy, Original value: : DAL.Accounts, New value: null, Event type: Create
+Changed: 20161110124125, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Accounts_883FADC060E33EC57228EBC70BB17B094485FC02A2ACCB858EE5251262048CEF, New value: null, Event type: Delete
+Changed: 20161110125009, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Customers_076C6AFA36CB565926D89CCD837B9176C744EB6330D1981ABC81BC56E17D891F, New value: null, Event type: Delete
+Changed: 20161110130039, Changed by: Sander Fagerland Sandøy, Original value: : DAL.Accounts, New value: null, Event type: Create
+Changed: 20161110130145, Changed by: null, Original value: : DAL.Transactions, New value: null, Event type: Create
+Changed: 20161110130224, Changed by: Sander Fagerland Sandøy, Original value: : System.Data.Entity.DynamicProxies.Accounts_883FADC060E33EC57228EBC70BB17B094485FC02A2ACCB858EE5251262048CEF, New value: null, Event type: Delete
